fixed wrap guide

--- a/styles/base.less
+++ b/styles/base.less
@@ -12,6 +12,15 @@ atom-text-editor,
                 padding-left: 4px;
         }
 
+        .wrap-guide {
+                background-color: fade(@blue, 15%);
+                color: fade(@blue, 15%);
+        }
+
+        .indent-guide {
+                color: fade(@blue, 10%);
+        }
+
         .invisible-character {
                 color: #626b83;
         }
